tests/fail/net.stderr
error: invalid address: 192.168.1.1/300
 --> tests/fail/net.rs:4:18
  |
4 |     let a = net!("192.168.1.1/300");
  |                  ^^^^^^^^^^^^^^^^^

error: invalid address: 2001:db8::32::23/129
 --> tests/fail/net.rs:5:18
  |
5 |     let b = net!("2001:db8::32::23/129");
  |                  ^^^^^^^^^^^^^^^^^^^^^^
